--- a/daily_schedule_reminder.html
+++ b/daily_schedule_reminder.html
@@ -92,7 +92,9 @@ if (!classList || classList.length === 0) {
     scheduleDiv.appendChild(div);
   });
 }
-
+alert("Welcome to your daily schedule attack! Please check your books for the day.");
+  // Function to check if all books are packed
+  // and show an alert if any are missing
 
     function startCheck() {
       let missing = [];
