--- a/daily_schedule_reminder.html
+++ b/daily_schedule_reminder.html
@@ -24,6 +24,7 @@
 
 
   <script>
+    alert("Hello! Albaraa! JS is working!");
     const schedule = {
 // 6‑2 Timetable
 'Sunday': ["Science", "Islamic", "P.E.", "Math", "English", "Arabic", "Life Skills"],
@@ -92,9 +93,8 @@ if (!classList || classList.length === 0) {
     scheduleDiv.appendChild(div);
   });
 }
-alert("Welcome to your daily schedule attack! Please check your books for the day.");
-  // Function to check if all books are packed
-  // and show an alert if any are missing
+
+
 
     function startCheck() {
       let missing = [];
